<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/pref_header_general"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="enabled"
            app:title="@string/pref_enabled_name"
            app:summary="@string/pref_enabled_desc"
            app:iconSpaceReserved="false" />

        <Preference
            app:dependency="enabled"
            app:key="audio_file"
            app:persistent="false"
            app:title="@string/pref_audio_file_name"
            app:summary="@string/pref_audio_file_desc"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_header_about"
        app:iconSpaceReserved="false">

        <Preference
            app:key="version"
            app:persistent="false"
            app:title="@string/pref_version_name"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>